made some changes